--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,8 @@
             <version>1.18.4</version>
             <scope>provided</scope>
         </dependency>
+
+        <!--单元测试依赖-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
